--- a/frontend/src/app/Users/login/login.component.scss
+++ b/frontend/src/app/Users/login/login.component.scss
@@ -5,6 +5,7 @@
     height: 90vh;
 }
 form{
+    background-color: #b5b9c9;
     display: block;
     max-width: 35rem;
     width: 90%;
@@ -53,7 +54,7 @@ button{
     cursor: pointer;
     padding: 1rem;
     font-size: 1.2rem;
-    background-color: burlywood;
+    background-color: #000000;
     color: white;
 }
 button:hover{
