--- a/frontend/src/app/pages/add-task/add-task.component.html
+++ b/frontend/src/app/pages/add-task/add-task.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="body">
-        <label>Add Task</label>
-        <input #title type="text" placeholder="please Enter Task">
-        <button (click)="newTask(title.value)">+Add Task</button>
+        <label>{{action}} Task</label>
+        <input #title type="text" placeholder="please Enter Task" value="{{taskname}}">
+        <button (click)="newTask(title.value)">+ {{action}} Task</button>
     </div>
 </div>
