--- a/frontend/src/app/pages/add-task/add-task.component.scss
+++ b/frontend/src/app/pages/add-task/add-task.component.scss
@@ -11,6 +11,7 @@
     border-radius: 5px;
     border: 1px solid black;
     text-align: center;
+    background-color: #b5b9c9;
 }
 label{
     font-size: 1.5rem;
